flux/apps/ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ui
  annotations: 
    linkerd.io/inject: enabled
    kustomize.toolkit.fluxcd.io/prune: disabled
