flux/apps/ui/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: image-pull-sa
      containers:
      - name: ui
        image: ${artifact_registry_path}ui:main-3f7d791
        resources:
          limits:
            cpu: 600m
            memory: 4Gi
          requests:
            cpu: 200m
            memory: 1Gi
        ports:
        - containerPort: 3000
