flux/apps/ui/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ui-dev
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
